[gd_scene load_steps=8 format=2]

[ext_resource path="res://PressurePad.gd" type="Script" id=1]
[ext_resource path="res://Misc/Pressure_plate.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.31233, 3.4245 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "stepped",
"speed": 5.0
} ]

[node name="PressurePad" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.210205, -1.47157 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.420456, -13.9533 )
frames = SubResource( 5 )
animation = "stepped"
speed_scale = 5.0

[node name="Timer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_PressurePad_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
